src/objects/pse__Resource_Request__c.object
<CustomObject>
    <customHelpPage>pse__ResourceRequestHelp</customHelpPage>
    <description>Operating as a means of asking for resources to staff an existing or planned project, resource requests collect information to help users responsible for staffing and assignment creation to choose the right resource. The user requesting the resource (e.g., project manager or sales professional) may create a resource request from an opportunity or project, or generate them based on project tasks and project task assignments. Held resource requests, or “soft bookings”, occur when a named resource has been reserved for a project or opportunity, but not yet assigned to the project.</description>
    <fields>
        <fullName>psa_report__Project_Name__c</fullName>
        <formula>pse__Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__AccountId__c</fullName>
        <description>The Id of the Account associated with the related Opportunity, if one exists; otherwise, the Id of the Account associated with the related Project, if one exists.</description>
        <formula>IF(AND(NOT(ISNULL(pse__Opportunity__c)),NOT(pse__Opportunity__c=&apos;&apos;),NOT(ISNULL(pse__Opportunity__r.AccountId)),NOT(pse__Opportunity__r.AccountId=&apos;&apos;)),
pse__Opportunity__r.AccountId,
IF(AND(NOT(ISNULL(pse__Project__c)),NOT(pse__Project__c=&apos;&apos;),NOT(ISNULL(pse__Project__r.pse__Account__c)),NOT(pse__Project__r.pse__Account__c=&apos;&apos;)),pse__Project__r.pse__Account__c,null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Id of the Account associated with the related Opportunity, if one exists; otherwise, the Id of the Account associated with the related Project, if one exists.</inlineHelpText>
        <label>AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Account_Link__c</fullName>
        <description>A link to the Account associated with the related Opportunity, if one exists; otherwise, a link to the Account associated with the related Project, if one exists.</description>
        <formula>IF(ISNULL(pse__AccountId__c),&apos;&apos;,HYPERLINK(&apos;/&apos;&amp;pse__AccountId__c, IF(ISNULL(pse__Account__c),pse__AccountId__c,pse__Account__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A link to the Account associated with the related Opportunity, if one exists; otherwise, a link to the Account associated with the related Project, if one exists.</inlineHelpText>
        <label>Account Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Account__c</fullName>
        <description>The Name of the Account associated with the related Opportunity, if one exists; otherwise, the Name of the Account associated with the related Project, if one exists.</description>
        <formula>IF(AND(NOT(ISNULL(pse__Opportunity__c)),NOT(pse__Opportunity__c=&apos;&apos;),NOT(ISNULL(pse__Opportunity__r.AccountId)),NOT(pse__Opportunity__r.AccountId=&apos;&apos;),NOT(ISNULL(pse__Opportunity__r.Account.Name)),NOT(pse__Opportunity__r.Account.Name=&apos;&apos;)),pse__Opportunity__r.Account.Name,
IF(AND(NOT(ISNULL(pse__Project__c)),NOT(pse__Project__c=&apos;&apos;),NOT(ISNULL(pse__Project__r.pse__Account__c)),NOT(pse__Project__r.pse__Account__c=&apos;&apos;),NOT(ISNULL(pse__Project__r.pse__Account__r.Name)),NOT(pse__Project__r.pse__Account__r.Name=&apos;&apos;)),pse__Project__r.pse__Account__r.Name,null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Name of the Account associated with the related Opportunity, if one exists; otherwise, the Name of the Account associated with the related Project, if one exists.</inlineHelpText>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignment</label>
        <referenceTo>pse__Assignment__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Average_Cost_Rate_Currency_Code__c</fullName>
        <label>Average Cost Rate Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Average_Cost_Rate_Number__c</fullName>
        <label>Average Cost Rate Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Average_Cost_Rate__c</fullName>
        <formula>pse__Average_Cost_Rate_Currency_Code__c &amp; &apos; &apos; &amp; TEXT(pse__Average_Cost_Rate_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Cost Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Latitude_PSA__c</fullName>
        <label>Latitude (PSA)</label>
        <precision>10</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Longitude_PSA__c</fullName>
        <label>Longitude (PSA)</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Milestone__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <infoMessage>Only selected project&apos;s milestones are shown. To display all Milestones, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Milestone__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity_Probability__c</fullName>
        <formula>pse__Opportunity__r.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Probability (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Allocated__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Enter the percentage that this resource should be allocated to the project.</inlineHelpText>
        <label>Percent Allocated</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Bill_Rate__c</fullName>
        <description>This field is the bill rate used during the planning activities for an assignment to assess potential value. It is mainly used for fixed price projects where the actual bill rate is 0</description>
        <inlineHelpText>This field is the bill rate used during the planning activities for an assignment to assess potential value. It is mainly used for fixed price projects where the actual bill rate is 0</inlineHelpText>
        <label>Planned Bill Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Preferred_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Schedule</label>
        <referenceTo>pse__Schedule__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Primary_Skill_Certification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not intended for direct entry - controlled by the primary flag on the related skills / certifications.</inlineHelpText>
        <label>Primary Skill / Certification</label>
        <referenceTo>pse__Skill__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Primary_Skill_Minimum_Rating__c</fullName>
        <description>Added to simplify reports. Not intended for editing.</description>
        <label>Primary Skill Minimum Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Rate_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Card</label>
        <referenceTo>pse__Rate_Card__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Related_Resource_Request_Staffed_On__c</fullName>
        <description>Date and time on which a resource request in the same resource request set was staffed.</description>
        <inlineHelpText>Date and time on which a resource request in the same resource request set was staffed.</inlineHelpText>
        <label>Related Resource Request Staffed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Request_Billable_Amount__c</fullName>
        <formula>pse__Requested_Bill_Rate__c *  pse__SOW_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Billable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Request_Priority__c</fullName>
        <label>Request Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse__Requested_Bill_Rate__c</fullName>
        <inlineHelpText>Request an hourly bill rate</inlineHelpText>
        <label>Requested Bill Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Held__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resource Held</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Request_Name__c</fullName>
        <label>Resource Request Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Request_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related resource request set.</description>
        <inlineHelpText>Lookup to the related resource request set.</inlineHelpText>
        <label>Resource Request Set</label>
        <referenceTo>pse__Resource_Request_Set__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Role__c</fullName>
        <label>Resource Role</label>
        <picklist>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Suggest a resource to use</inlineHelpText>
        <label>Suggested Resource</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.pse__Is_Resource__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Is_Resource_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only active resources are shown. To display all resources, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__SOW_Hours__c</fullName>
        <inlineHelpText>Requested hours for this resource request.</inlineHelpText>
        <label>Requested Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Staffed_Related_Resource_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related resource request, which is staffed.</description>
        <inlineHelpText>Lookup to the related resource request, which is staffed.</inlineHelpText>
        <label>Staffed Related Resource Request</label>
        <referenceTo>pse__Resource_Request__c</referenceTo>
        <relationshipLabel>Resource Requests (Staffed Related Resource Request)</relationshipLabel>
        <relationshipName>Resource_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Staffer_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Staffer Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Staffer_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This resource will be picked by Staffer for this resource request.</description>
        <label>Resource</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.pse__Is_Resource__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Is_Resource_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only active resources are shown. To display all resources, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Resource Requests (Staffer Resource)</relationshipLabel>
        <relationshipName>Resource_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse__Suggested_Bill_Rate_Currency_Code__c</fullName>
        <label>Suggested Bill Rate Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Suggested_Bill_Rate_Number__c</fullName>
        <label>Suggested Bill Rate Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Suggested_Bill_Rate__c</fullName>
        <formula>pse__Suggested_Bill_Rate_Currency_Code__c &amp; &apos; &apos; &amp; TEXT(pse__Suggested_Bill_Rate_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suggested Bill Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Update_Related_Resource_Requests__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the staffing fields on the resource request are updated when a resource request belonging to the same resource request set as this one is staffed.</description>
        <inlineHelpText>Indicates whether the staffing fields on the resource request are updated when a resource request belonging to the same resource request set as this one is staffed.</inlineHelpText>
        <label>Update Related Resource Requests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Work_City_PSA__c</fullName>
        <label>Work City (PSA)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Work_Country_PSA__c</fullName>
        <label>Work Country (PSA)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Work_PostalCode_PSA__c</fullName>
        <label>Work Zip/Postal Code (PSA)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Work_State_PSA__c</fullName>
        <label>Work State/Province (PSA)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Work_Street_PSA__c</fullName>
        <label>Work Street (PSA)</label>
        <type>TextArea</type>
    </fields>
    <label>Resource Request</label>
    <listViews>
        <fullName>Assigned</fullName>
        <columns>NAME</columns>
        <columns>pse__Request_Priority__c</columns>
        <columns>pse__Status__c</columns>
        <columns>pse__Resource__c</columns>
        <columns>pse__Opportunity__c</columns>
        <columns>pse__Project__c</columns>
        <columns>pse__Resource_Role__c</columns>
        <columns>pse__Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pse__Status__c</field>
            <operation>equals</operation>
            <value>Assigned</value>
        </filters>
        <label>3_Assigned</label>
    </listViews>
    <listViews>
        <fullName>Cancelled</fullName>
        <columns>NAME</columns>
        <columns>pse__Request_Priority__c</columns>
        <columns>pse__Status__c</columns>
        <columns>pse__Resource__c</columns>
        <columns>pse__Opportunity__c</columns>
        <columns>pse__Project__c</columns>
        <columns>pse__Resource_Role__c</columns>
        <columns>pse__Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pse__Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>5_Cancelled</label>
    </listViews>
    <listViews>
        <fullName>Draft</fullName>
        <columns>NAME</columns>
        <columns>pse__Request_Priority__c</columns>
        <columns>pse__Status__c</columns>
        <columns>pse__Resource__c</columns>
        <columns>pse__Opportunity__c</columns>
        <columns>pse__Project__c</columns>
        <columns>pse__Resource_Role__c</columns>
        <columns>pse__Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pse__Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>1_Draft</label>
    </listViews>
    <listViews>
        <fullName>Hold</fullName>
        <columns>NAME</columns>
        <columns>pse__Request_Priority__c</columns>
        <columns>pse__Status__c</columns>
        <columns>pse__Resource__c</columns>
        <columns>pse__Opportunity__c</columns>
        <columns>pse__Project__c</columns>
        <columns>pse__Resource_Role__c</columns>
        <columns>pse__Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pse__Status__c</field>
            <operation>equals</operation>
            <value>Hold</value>
        </filters>
        <label>4_Hold</label>
    </listViews>
    <listViews>
        <fullName>Ready_to_Staff</fullName>
        <columns>NAME</columns>
        <columns>pse__Request_Priority__c</columns>
        <columns>pse__Status__c</columns>
        <columns>pse__Resource__c</columns>
        <columns>pse__Opportunity__c</columns>
        <columns>pse__Project__c</columns>
        <columns>pse__Resource_Role__c</columns>
        <columns>pse__Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pse__Status__c</field>
            <operation>equals</operation>
            <value>Ready to Staff</value>
        </filters>
        <label>2_Ready to Staff</label>
    </listViews>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Request_Priority__c</columns>
        <columns>pse__Status__c</columns>
        <columns>pse__Resource__c</columns>
        <columns>pse__Project__c</columns>
        <columns>pse__Resource_Role__c</columns>
        <columns>pse__Start_Date__c</columns>
        <columns>pse__End_Date__c</columns>
        <columns>pse__Primary_Skill_Certification__c</columns>
        <columns>pse__SOW_Hours__c</columns>
        <columns>pse__Resource_Held__c</columns>
        <columns>pse__Staffer_Resource__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RR-{0000000}</displayFormat>
        <label>Resource Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>pse__PSE_Member_Share__c</fullName>
        <label>PSE Member Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>pse__PSE_PM_Share__c</fullName>
        <label>PSE PM Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>pse__Check_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>pse__End_Date__c &lt; pse__Start_Date__c</errorConditionFormula>
        <errorDisplayField>pse__End_Date__c</errorDisplayField>
        <errorMessage>End Date cannot occur before Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Check_Opp_Project_Mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    LEN(pse__Opportunity__c) &gt; 0,
    LEN(pse__Project__c) &gt; 0,
    LEN(pse__Project__r.pse__Opportunity__c) &gt; 0,
    pse__Project__r.pse__Opportunity__c != pse__Opportunity__c
)</errorConditionFormula>
        <errorDisplayField>pse__Project__c</errorDisplayField>
        <errorMessage>The Opportunity on the request does not match the Opportunity on the Project</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Milestone_Project_Mismatch</fullName>
        <active>true</active>
        <description>Validates whether the milestone and resource request belong to the same project.</description>
        <errorConditionFormula>AND(
LEN(pse__Project__c) &gt; 0,
LEN(pse__Milestone__c) &gt; 0,
pse__Milestone__r.pse__Project__c != pse__Project__c
)</errorConditionFormula>
        <errorMessage>Cannot associate the milestone with the resource request. The milestone must belong to the resource request&apos;s project. Either change the milestone or change the project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Project_Or_Opp_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
    LEN(pse__Opportunity__c) = 0,
    LEN(pse__Project__c) = 0
)</errorConditionFormula>
        <errorMessage>An Opportunity or Project must be set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Project_Required_for_Milestone</fullName>
        <active>true</active>
        <description>Validates that the project is not blank when a milestone is selected on the resource request.</description>
        <errorConditionFormula>AND(LEN( pse__Milestone__c ) &gt; 0, ISBLANK(pse__Project__c))</errorConditionFormula>
        <errorMessage>Project cannot be blank if a milestone is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Validate_Contact_Is_Resource</fullName>
        <active>true</active>
        <errorConditionFormula>(ISNEW() 
			||
			ISCHANGED( pse__Resource__c) )
			&amp;&amp;
			(AND(LEN(pse__Resource__c) &gt; 0,  
			NOT(pse__Resource__r.pse__Is_Resource__c)))</errorConditionFormula>
        <errorDisplayField>pse__Resource__c</errorDisplayField>
        <errorMessage>You must select a Contact that has the Is Resource field set to true</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Validate_Project_Opp_And_Account_Change</fullName>
        <active>true</active>
        <description>Rule to validate the change to project, opportunity or account of the resource request populated with a resource request set.</description>
        <errorConditionFormula>AND (NOT( ISBLANK(pse__Resource_Request_Set__c)), ( OR( ISCHANGED( pse__Account__c ), ISCHANGED( pse__Opportunity__c ) , ISCHANGED( pse__Project__c ) ) ) )</errorConditionFormula>
        <errorMessage>You cannot change the project, opportunity and account of a resource request that belongs to a resource request set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Validate_Ready_to_Staff</fullName>
        <active>true</active>
        <description>Validate that correct fields are set to enter ready to staff state.</description>
        <errorConditionFormula>AND(  ISPICKVAL( pse__Status__c , &apos;Ready to Staff&apos;) ,  OR( ISNULL(pse__Start_Date__c) , ISNULL(pse__SOW_Hours__c) ))</errorConditionFormula>
        <errorMessage>You must have a valid Start Date and Hours to change status to Ready to Staff</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Validate_Status</fullName>
        <active>true</active>
        <description>Don&apos;t allow the Active status until the associated opportunity is closed/won and the request has a project.</description>
        <errorConditionFormula>AND(
    LEN(pse__Opportunity__c) &gt; 0,
    ISPICKVAL( pse__Status__c , &apos;Active&apos;),
    OR( 
        NOT( pse__Opportunity__r.IsClosed ), 
        NOT( pse__Opportunity__r.IsWon ),
        LEN(pse__Project__c) = 0
    )
)</errorConditionFormula>
        <errorDisplayField>pse__Status__c</errorDisplayField>
        <errorMessage>The Active status can only be used for closed, won opportunities and must have a project set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__check_project_currency</fullName>
        <active>true</active>
        <description>Insure the requested currency is the same as the project&apos;s currency</description>
        <errorConditionFormula>AND(LEN(pse__Project__c)&gt;0, TEXT(pse__Project__r.CurrencyIsoCode) != TEXT(CurrencyIsoCode))</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>The currency for the Resource Request must match the currency for the Project</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__end_date_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(pse__End_Date__c)</errorConditionFormula>
        <errorDisplayField>pse__End_Date__c</errorDisplayField>
        <errorMessage>End Date is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__hours_required</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISNULL(pse__SOW_Hours__c), pse__SOW_Hours__c &lt;=0)</errorConditionFormula>
        <errorDisplayField>pse__SOW_Hours__c</errorDisplayField>
        <errorMessage>Requested Hours is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__start_date_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(pse__Start_Date__c)</errorConditionFormula>
        <errorDisplayField>pse__Start_Date__c</errorDisplayField>
        <errorMessage>Start date is required</errorMessage>
    </validationRules>
</CustomObject>